# rust-userapi

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md
docs/: ATeam.md  AcceptInviteRequest.md  AnApiToken.md  DeleteInviteResponse.md  DeleteTokenResponse.md  Invite.md  InviteList.md  InviteRequest.md  Member.md  MemberList.md  MemberOfATeam.md  ProfileApi.md  RequestInviteDetails.md  RpcStatus.md  Team.md  TeamList.md  TeamsApi.md  Token.md  TokenList.md  TokensApi.md  UserProfile.md
examples/: README.md
examples/profile/: .gitignore  Cargo.toml
examples/profile/src/: main.rs
src/apis/: configuration.rs  mod.rs  profile_api.rs  teams_api.rs  tokens_api.rs
src/models/: a_team.rs  accept_invite_request.rs  an_api_token.rs  delete_invite_response.rs  delete_token_response.rs  invite.rs  invite_list.rs  invite_request.rs  member.rs  member_list.rs  member_of_a_team.rs  mod.rs  protobuf_any.rs  request_invite_details.rs  rpc_status.rs  team.rs  team_list.rs  token.rs  token_list.rs  user_profile.rs
